src-tauri/check_output.txt
    Checking first-tauri-app v0.1.0 (C:\Users\habee\Desktop\Habeeb\DesktopApps\first-tauri-app\src-tauri)
warning: unused import: `std::path::PathBuf`
 --> src\main.rs:4:5
  |
4 | use std::path::PathBuf;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no method named `path` found for struct `AppHandle<R>` in the current scope
   --> src\main.rs:9:10
    |
  8 |       let mut path = app_handle
    |  ____________________-
  9 | |         .path()
    | |         -^^^^ method not found in `AppHandle`
    | |_________|
    |
    |
   ::: C:\Users\habee\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tauri-2.10.2\src\lib.rs:772:6
    |
772 |     fn path(&self) -> &crate::path::PathResolver<R> {
    |        ---- the method is available for `AppHandle` here
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `Manager` which provides `path` is implemented but not in scope; perhaps you want to import it
    |
  3 + use tauri::Manager;
    |

error[E0282]: type annotations needed
  --> src\main.rs:11:19
   |
11 |         .map_err(|e| e.to_string())?;
   |                   ^  - type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
11 |         .map_err(|e: /* Type */| e.to_string())?;
   |                    ++++++++++++

error[E0599]: no method named `path` found for struct `AppHandle<R>` in the current scope
   --> src\main.rs:23:10
    |
 22 |       let mut path = app_handle
    |  ____________________-
 23 | |         .path()
    | |         -^^^^ method not found in `AppHandle`
    | |_________|
    |
    |
   ::: C:\Users\habee\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tauri-2.10.2\src\lib.rs:772:6
    |
772 |     fn path(&self) -> &crate::path::PathResolver<R> {
    |        ---- the method is available for `AppHandle` here
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `Manager` which provides `path` is implemented but not in scope; perhaps you want to import it
    |
  3 + use tauri::Manager;
    |

error[E0282]: type annotations needed
  --> src\main.rs:25:19
   |
25 |         .map_err(|e| e.to_string())?;
   |                   ^  - type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
25 |         .map_err(|e: /* Type */| e.to_string())?;
   |                    ++++++++++++

Some errors have detailed explanations: E0282, E0599.
For more information about an error, try `rustc --explain E0282`.
warning: `first-tauri-app` (bin "first-tauri-app") generated 1 warning
error: could not compile `first-tauri-app` (bin "first-tauri-app") due to 4 previous errors; 1 warning emitted
